--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <meta name="keywords" content="ProKvm蓝色大气企业模板">
 <meta name="description" content="ProKvm蓝色大气企业模板">
 <meta name='robots' content='max-image-preview:large' />   
-<link rel='stylesheet' id='uikit-css'  href='css/uikit.css' type='text/css' media='all' />
-<link rel='stylesheet' id='diy-css'  href='css/diy.css' type='text/css' media='all' />
+<link rel='stylesheet' id='uikit-css'  href='uikit.css' type='text/css' media='all' />
+<link rel='stylesheet' id='diy-css'  href='diy.css' type='text/css' media='all' />
 
-<script type='text/javascript' src='css/uikit.min.js' id='uikit-js'></script>
+<script type='text/javascript' src='uikit.min.js' id='uikit-js'></script>
  
 </head>
 	<body>
