--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <meta name="applicable-device" content="pc,mobile">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>ProKvm蓝色大气企业模板</title>
-<meta name="keywords" content="ProKvm蓝色大气企业模板">
-<meta name="description" content="ProKvm蓝色大气企业模板">
+<title>ProKvm蓝色大气企业模板 -Prokvm云管理系统 </title>
+<meta name="keywords" content="ProKvm蓝色大气企业模板，Prokvm主控财务系统，是集域名注册、虚拟主机、数据库、云服务器、用户管理与充值、财务等为一体的网站管理系统。Prokvm主控财务系统，是集域名注册、虚拟主机、数据库、云服务器、用户管理与充值、财务等为一体的网站管理系统。">
+<meta name="description" content="ProKvm蓝色大气企业模板，ProkvmIDC财务管理系统，自主研发，安全可靠。FASTOSAPI独立自主的被控虚拟化。Prokvm，基于Proxmox VE实现多用户、多计费模式、IP防盗、自定义防火墙。可单机、可集群、多种存储方式（ZFS、CEPH、lvm.....等），支持宝塔虚拟主机、hyper-v虚拟化管控。功能丰富，安全稳定。">
 <meta name='robots' content='max-image-preview:large' />   
 <link rel='stylesheet' id='uikit-css'  href='uikit.css' type='text/css' media='all' />
 <link rel='stylesheet' id='diy-css'  href='diy.css' type='text/css' media='all' />
