--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             </div>
                             <div class="dcy-grid-ceosmls" dcy-grid>
                                 <div class="dcy-width-1-4">
-                                    <a class="btn3" href="#">1年免费更新</a>
+                                    <a class="btn3" href="#">1年内免费更新</a>
                                 </div>
                                 <div class="dcy-width-1-4">
                                     <a class="btn3" href="#">1V1技术支持</a>
