--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
                             </div>
                             <div class="dcy-grid-ceosmls" dcy-grid>
                                 <div class="dcy-width-1-4">
-                                    <a class="btn3" href="#">1年内更新服务</a>
+                                    <a class="btn3" href="#">1年内免费更新</a>
                                 </div>
                                 <div class="dcy-width-1-4">
                                     <a class="btn3" href="#">1V1技术支持</a>
                                 </div>
                                 <div class="dcy-width-1-4">
-                                    <a class="btn3" href="#">续费是自愿</a>
+                                    <a class="btn3" href="#">到期单次更新单独收费</a>
                                 </div>
                                 <div class="dcy-width-1-4">
                                     <a class="btn3" href="#">模板授权是买断</a>
