--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     margin-left: 10px;
     line-height: 23px;
 }		</style>
-		<div id="ceotheme">
+		<div id="dcytheme">
     <section class="dcy-shop-single" style="background-color: #006fff;">
     <div class="background-shape">
         <div class="circle1 wow fadeInRightBig" data-wow-duration="4000ms" style="visibility: visible; animation-duration: 4000ms; animation-name: fadeInRightBig;"></div>
@@ -51,18 +51,18 @@
     </div>
 	<div class="dcy-container">
 	    <div class="dcy-shop-single-box">
-    		<div class="dcy-grid-ceosmls" dcy-grid>
+    		<div class="dcy-grid-dcysmls" dcy-grid>
     		    <div class="dcy-width-1-1 dcy-width-1-2@s">
     		        <div class="dcy-shop-single-z">
     		            <div class="shop-single-z-title">
                             <h1>ProKvm蓝色大气企业模板</h1>
                             <p>模板基于ProKvm系统（官网：www.xmbillion.com）深度开发，简洁大气，高端耐看。后期会继续深度开发，欢迎提建议！</p>
                         </div>
-                        						                        <div class="shop-single-z-price">
+                        <div class="shop-single-z-price">
                             价格：<span>￥<em>666</em>.00</span> <s>原价：999 D币<i>限时优惠</i></s>
                         </div>
 							<div class="shop-single-z-btn">
-                            <div class="dcy-grid-ceosmls" dcy-grid>
+                            <div class="dcy-grid-dcysmls" dcy-grid>
 								<div class="dcy-width-1-2">
 								<a class="z1 btn1" href="https://wpa.qq.com/msgrd?v=1&amp;uin=20233652&amp;site=qq&amp;menu=yes">立即购买</a>
 								</div>
@@ -70,13 +70,13 @@
                                     <a class="btn2" href="https://cloud.ackpet.com" target="_blank">查看演示</a>
                                 </div>
                             </div>
-                            <div class="dcy-grid-ceosmls" dcy-grid>
+                            <div class="dcy-grid-dcysmls" dcy-grid>
 								<div class="dcy-width-1-1">
 								<a class="z1 btn3" href="skyblue3.0.9.zip">更新包下载</a>
 								</div>
                                  
                             </div>
-                            <div class="dcy-grid-ceosmls" dcy-grid>
+                            <div class="dcy-grid-dcysmls" dcy-grid>
                                 <div class="dcy-width-1-4">
                                     <a class="btn3" href="#">1年内免费更新</a>
                                 </div>
@@ -96,7 +96,7 @@
     	                    <ul class="ul">
     	                        	 <li class="li">
         	                        <span>退款政策：</span><div class="discount">
-    <i class="ceofont ceoicon-vip-crown-2-line"></i>退款详情 
+    <i class="dcyfont dcyicon-vip-crown-2-line"></i>退款详情 
     <div class="box">
         <ul>
             <div class="title">折扣详情</div>
@@ -119,7 +119,7 @@
     	                <div class="dcy-position-relative" dcy-slideshow="animation: fade">
                             <ul class="dcy-slideshow-items" style="box-shadow: 0 45px 80px -24px #006fff7a;">
                                                                 <li>
-                                    <img src="20240315214137301.png" alt="CeoMax-Pro主题">
+                                    <img src="20240315214137301.png" alt="ProKvm蓝色大气企业模板">
                                 </li>
                                                             </ul>
                              
