--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                     <a class="btn3" href="#">1V1技术支持</a>
                                 </div>
                                 <div class="dcy-width-1-4">
-                                    <a class="btn3" href="#">到期单次更新单独收费</a>
+                                    <a class="btn3" href="#">到期更新单独收费</a>
                                 </div>
                                 <div class="dcy-width-1-4">
                                     <a class="btn3" href="#">模板授权是买断</a>
