--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
                                  
                             </div>
                             <div class="dcy-grid-dcysmls" dcy-grid>
-                                <div class="dcy-width-1-4">
+                                <div class="dcy-width-1-2">
                                     <a class="btn3" href="#">1年内免费更新</a>
                                 </div>
-                                <div class="dcy-width-1-4">
+                                <div class="dcy-width-1-2">
                                     <a class="btn3" href="#">1V1技术支持</a>
                                 </div>
-                                <div class="dcy-width-1-4">
-                                    <a class="btn3" href="#">到期更新单独收费</a>
+                                <div class="dcy-width-1-2">
+                                    <a class="btn3" href="#">到期单次更新收费</a>
                                 </div>
-                                <div class="dcy-width-1-4">
+                                <div class="dcy-width-1-2">
                                     <a class="btn3" href="#">模板授权是买断</a>
                                 </div>
                             </div>
