--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
     		            <div class="shop-single-z-title">
                             <h1>ProKvm蓝色大气企业模板</h1>
                             <p>模板基于ProKvm系统（官网：www.xmbillion.com）深度开发，简洁大气，高端耐看。后期会继续深度开发，欢迎提建议！</p>
+			    <p>提供1年免费在线更新服务，到期后666元一年续费，续费是自愿原则，不续费不影响使用（系统推出的新功能无法使用），模板授权是永久买断；
+次年不续费，也可以提供在线更新服务，更新一次收费300（可集中多版本一次更新）。</p>
                         </div>
                         <div class="shop-single-z-price">
                             价格：<span>￥<em>666</em>.00</span> <s>原价：999 D币<i>限时优惠</i></s>
