--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 								</div>
                                  
                             </div>
-                            <div class="dcy-grid-dcysmls" dcy-grid>
+                           <!-- <div class="dcy-grid-dcysmls" dcy-grid>
                                 <div class="dcy-width-1-4">
                                     <a class="btn3" href="#">1年内免费更新</a>
                                 </div>
@@ -91,7 +91,7 @@
                                 <div class="dcy-width-1-4">
                                     <a class="btn3" href="#">模板授权是买断</a>
                                 </div>
-                            </div>
+                            </div>-->
                         </div>
 
     	                <div class="shop-single-z-meta">
