--- a/index.html
+++ b/index.html
@@ -78,20 +78,20 @@
 								</div>
                                  
                             </div>
-                           <!-- <div class="dcy-grid-dcysmls" dcy-grid>
+                            <div class="dcy-grid-dcysmls" dcy-grid>
                                 <div class="dcy-width-1-4">
-                                    <a class="btn3" href="#">1年内免费更新</a>
+                                    <a class="btn3" href="skyblue3.0.9.zip">更新包下载</a>
                                 </div>
                                 <div class="dcy-width-1-4">
-                                    <a class="btn3" href="#">1V1技术支持</a>
+                                    <a class="btn3" href="https://cloud.ackpet.com/product/index/1">首页样式1</a>
                                 </div>
                                 <div class="dcy-width-1-4">
-                                    <a class="btn3" href="#">到期单次更新收费</a>
+                                    <a class="btn3" href="https://cloud.ackpet.com/product/index/2">首页样式2</a>
                                 </div>
                                 <div class="dcy-width-1-4">
-                                    <a class="btn3" href="#">模板授权是买断</a>
+                                    <a class="btn3" href="https://cloud.ackpet.com/product/index/3">首页样式3</a>
                                 </div>
-                            </div>-->
+                            </div> 
                         </div>
 
     	                <div class="shop-single-z-meta">
