--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							<div class="shop-single-z-btn">
                             <div class="dcy-grid-dcysmls" dcy-grid>
 								<div class="dcy-width-1-2">
-								<a class="z1 btn1" href="https://wpa.qq.com/msgrd?v=1&amp;uin=20233652&amp;site=qq&amp;menu=yes">立即购买</a>
+								<a class="z1 btn1" href="https://wpa.qq.com/msgrd?v=1&uin=20233652&site=qq&menu=yes">立即购买</a>
 								</div>
                                 <div class="dcy-width-1-2">
                                     <a class="btn2" href="https://cloud.ackpet.com" target="_blank">查看演示</a>
