--- a/index.html
+++ b/index.html
@@ -75,9 +75,6 @@
                              
                             <div class="dcy-grid-dcysmls" dcy-grid>
                                 <div class="dcy-width-1-4">
-                                    <a class="btn3" href="skyblue3.0.9.zip">更新包下载</a>
-                                </div>
-                                <div class="dcy-width-1-4">
                                     <a class="btn3" href="https://cloud.ackpet.com/product/index/1">首页样式1</a>
                                 </div>
                                 <div class="dcy-width-1-4">
@@ -85,6 +82,9 @@
                                 </div>
                                 <div class="dcy-width-1-4">
                                     <a class="btn3" href="https://cloud.ackpet.com/product/index/3">首页样式3</a>
+                                </div>
+                                <div class="dcy-width-1-4">
+                                    <a class="btn3" href="https://cloud.ackpet.com/product/index/4">首页样式4</a>
                                 </div>
                             </div> 
                         </div>
