--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 次年不续费，也可以提供在线更新服务，更新一次收费100（可集中多版本一次更新）。</p>
                         </div>
                         <div class="shop-single-z-price">
-                            价格：<span>￥<em>666</em>.00</span> <s>原价：999 D币<i>限时优惠</i></s>
+                            价格：<span>￥<em>599</em>.00</span> <s>原价：888 RMB<i>限时优惠</i></s>
                         </div>
 							<div class="shop-single-z-btn">
                             <div class="dcy-grid-dcysmls" dcy-grid>
