--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+ 
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -35,7 +35,7 @@
     line-height: 23px;
 }		</style>
 		<div id="dcytheme">
-    <section class="dcy-shop-single" style="background-color: #006fff;">
+ <section class="dcy-shop-single" style="background-color: #006fff;">
     <div class="background-shape">
         <div class="circle1 wow fadeInRightBig" data-wow-duration="4000ms" style="visibility: visible; animation-duration: 4000ms; animation-name: fadeInRightBig;"></div>
         <div class="circle2 wow fadeInRightBig" data-wow-duration="4000ms" style="visibility: visible; animation-duration: 4000ms; animation-name: fadeInRightBig;"></div>
@@ -51,47 +51,50 @@
     </div>
 	<div class="dcy-container">
 	    <div class="dcy-shop-single-box">
-    		<div class="dcy-grid-dcysmls" dcy-grid>
-    		    <div class="dcy-width-1-1 dcy-width-1-2@s">
+    		<div class="dcy-grid-dcysmls dcy-grid" dcy-grid="">
+    		    <div class="dcy-width-1-1 dcy-width-1-2@s dcy-first-column">
     		        <div class="dcy-shop-single-z">
     		            <div class="shop-single-z-title">
                             <h1>ProKvm蓝色大气企业模板</h1>
-                            <p>模板基于ProKvm系统（官网：www.xmbillion.com）深度开发，简洁大气，高端耐看。后期会继续深度开发，欢迎提建议！</p>
-			    <p>提供1年免费在线更新服务，到期后666元一年续费，续费是自愿原则，不续费不影响使用（系统推出的新功能无法使用），模板授权是永久买断；
-次年不续费，也可以提供在线更新服务，更新一次收费100（可集中多版本一次更新）。</p>
+                            <p>模板基于ProKvm系统（官网：www.xmbillion.com）深度开发，简洁大气，高端耐看。后期会继续深度开发，欢迎提建议！
+
+提供1年免费在线更新服务，到期后666元一年续费，续费是自愿原则，不续费不影响使用（系统推出的新功能无法使用），模板授权是永久买断； 次年不续费，也可以提供在线更新服务，更新一次收费100（可集中多版本一次更新）。</p>
+                        </div>
+                        						                        <div class="shop-single-z-price">
+                            价格：<span><em>666</em> RMB</span> <s>原价：1599 RMB<i>新品活动</i></s>
                         </div>
                         <div class="shop-single-z-price">
-                            价格：<span>￥<em>599</em>.00</span> <s>原价：888 RMB<i>限时优惠</i></s>
-                        </div>
-							<div class="shop-single-z-btn">
-                            <div class="dcy-grid-dcysmls" dcy-grid>
-								<div class="dcy-width-1-2">
-								<a class="z1 btn1" href="https://wpa.qq.com/msgrd?v=1&uin=20233652&site=qq&menu=yes">立即购买</a>
-								</div>
-                                <div class="dcy-width-1-2">
+                                                    </div>
+												                        <div class="shop-single-z-btn">
+                            <div class="dcy-grid-dcysmls dcy-grid" dcy-grid="">
+                                		<div class="dcy-width-1-2 dcy-first-column">
+																			<a href="https://wpa.qq.com/msgrd?v=1&uin=20233652&site=qq&menu=yes" data-product-id="418" class="btn1" dcy-toggle="">
+											<span id="shop_single_an_id">立即购买</span>
+										</a>
+																	</div>
+																                                <div class="dcy-width-1-2">
                                     <a class="btn2" href="https://cloud.ackpet.com" target="_blank">查看演示</a>
                                 </div>
                             </div>
-                             
-                            <div class="dcy-grid-dcysmls" dcy-grid>
+                            <div class="dcy-grid-dcysmls dcy-grid" dcy-grid="">
                                 <div class="dcy-width-1-4">
-                                    <a class="btn3" href="https://cloud.ackpet.com/product/index/1">首页样式1</a>
+                                    <a class="btn4" href="/vip" target="_blank">升级会员</a>
                                 </div>
                                 <div class="dcy-width-1-4">
-                                    <a class="btn3" href="https://cloud.ackpet.com/product/index/2">首页样式2</a>
+                                    <a class="btn4" href="https://wpa.qq.com/msgrd?v=3&amp;uin=20233652&amp;site=qq&amp;menu=yes" target="_blank" rel="noreferrer nofollow">联系客服</a>
                                 </div>
                                 <div class="dcy-width-1-4">
-                                    <a class="btn3" href="https://cloud.ackpet.com/product/index/3">首页样式3</a>
+                                    <a class="btn4" href="https://auth.ackpet.com/" target="_blank">源码下载</a>
                                 </div>
                                 <div class="dcy-width-1-4">
-                                    <a class="btn3" href="https://cloud.ackpet.com/product/index/4">首页样式4</a>
+                                    <a class="btn4" href="https://auth.ackpet.com/" target="_blank">自助授权</a>
                                 </div>
-                            </div> 
+                            </div>
                         </div>
 
     	                <div class="shop-single-z-meta">
     	                    <ul class="ul">
-    	                        	 <li class="li">
+    	                        							 <li class="li">
         	                        <span>退款政策：</span><div class="discount">
     <i class="dcyfont dcyicon-vip-crown-2-line"></i>退款详情 
     <div class="box">
@@ -107,18 +110,54 @@
                                 <li class="li"><span>最后更新：</span><p>2024-11-15</p></li>
     	                        <li class="li"><span>最新版本：</span><p>V3.2.0</p></li>
     	                        <li class="li"><span>发布日期：</span><p>2022-12-09</p></li>
-    	                        <li class="li"><span>授权数量：</span><p>顶级域名授权</p></li>                            </ul>
+    	                        <li class="li"><span>授权数量：</span><p>顶级域名授权</p></li>                                 </ul>
     	                </div>
                     </div>
     	        </div>
     	        <div class="dcy-width-1-1 dcy-width-1-2@s">
     	            <div class="dcy-shop-single-y">
-    	                <div class="dcy-position-relative" dcy-slideshow="animation: fade">
-                            <ul class="dcy-slideshow-items" style="box-shadow: 0 45px 80px -24px #006fff7a;">
-                                                                <li>
-                                    <img src="20240315214137301.png" alt="ProKvm蓝色大气企业模板">
+    	                <div class="dcy-position-relative dcy-slideshow" dcy-slideshow="animation: fade">
+                            <ul class="dcy-slideshow-items" style="box-shadow: rgba(0, 111, 255, 0.48) 0px 45px 80px -24px; min-height: 331.875px;">
+                                <li tabindex="-1" class="dcy-active dcy-transition-active" style="z-index: -1;">
+                                    <img src="20240315214137301.png" alt="YPay 单商户版 专为个人打造的聚合免签系统">
+                                </li>
+                                <li tabindex="-1">
+                                    <img src="20240315214137301.png">
+                                </li>
+                                <li tabindex="-1">
+                                    <img src="20240315214137301.png">
+                                </li>
+                                <li tabindex="-1">
+                                    <img src="20240315214137301.png">
+                                </li>
+                                <li tabindex="-1">
+                                    <img src="20240315214137301.png">
+                                </li>
+                                <li tabindex="-1">
+                                    <img src="20240315214137301.png">
                                 </li>
                                                             </ul>
+                            <div class="dcy-shop-single-ybo dcy-position-relative dcy-visible-toggle dcy-light dcy-slider dcy-slider-container" tabindex="-1" dcy-slider="">
+                                <ul class="dcy-thumbnav dcy-slider-items dcy-child-width-1-2 dcy-child-width-1-4@m dcy-grid" style="transform: translate3d(0px, 0px, 0px);">
+                                    <li dcy-slideshow-item="0" tabindex="-1" class="dcy-active">
+                                        <a href="#"><img src="20240315214137301.png"></a>
+                                    </li>
+                                    <li dcy-slideshow-item="1" tabindex="-1">
+                                        <a href="#"><img src="20240315214137301.png"></a>
+                                    </li>
+                                    <li dcy-slideshow-item="2" tabindex="-1">
+                                        <a href="#"><img src="20240315214137301.png"></a>
+                                    </li>
+                                     <li dcy-slideshow-item="3" tabindex="-1">
+                                        <a href="#"><img src="20240315214137301.png"></a>
+                                    </li>
+                                     <li dcy-slideshow-item="4" tabindex="-1">
+                                        <a href="#"><img src="20240315214137301.png"></a>
+                                    </li>
+                                     <li dcy-slideshow-item="5" tabindex="-1">
+                                        <a href="#"><img src="20240315214137301.png"></a>
+                                    </li>
+                                                                    </ul>
                              
                         </div>
                     </div>
@@ -130,3 +169,5 @@
  </div>
 </body>
 </html>
+
+ 
