--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
                             </div>
                             <div class="dcy-grid-dcysmls dcy-grid" dcy-grid="">
                                 <div class="dcy-width-1-4">
-                                    <a class="btn4" href="/vip" target="_blank">升级会员</a>
+                                    <a class="btn4" href="/vip" target="_blank">后台控制</a>
                                 </div>
                                 <div class="dcy-width-1-4">
-                                    <a class="btn4" href="https://wpa.qq.com/msgrd?v=3&amp;uin=20233652&amp;site=qq&amp;menu=yes" target="_blank" rel="noreferrer nofollow">联系客服</a>
+                                    <a class="btn4" href="https://wpa.qq.com/msgrd?v=3&amp;uin=20233652&amp;site=qq&amp;menu=yes" target="_blank" rel="noreferrer nofollow">自定义颜色</a>
                                 </div>
                                 <div class="dcy-width-1-4">
-                                    <a class="btn4" href="https://auth.ackpet.com/" target="_blank">源码下载</a>
+                                    <a class="btn4" href="https://auth.ackpet.com/" target="_blank">模块化</a>
                                 </div>
                                 <div class="dcy-width-1-4">
                                     <a class="btn4" href="https://auth.ackpet.com/" target="_blank">自助授权</a>
