--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <meta name="applicable-device" content="pc,mobile">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>ProKvm蓝色大气企业模板 -Prokvm云管理系统 </title>
-<meta name="keywords" content="ProKvm蓝色大气企业模板，Prokvm主控财务系统，是集域名注册、虚拟主机、数据库、云服务器、用户管理与充值、财务等为一体的网站管理系统。Prokvm主控财务系统，是集域名注册、虚拟主机、数据库、云服务器、用户管理与充值、财务等为一体的网站管理系统。">
-<meta name="description" content="ProKvm蓝色大气企业模板，ProkvmIDC财务管理系统，自主研发，安全可靠。FASTOSAPI独立自主的被控虚拟化。Prokvm，基于Proxmox VE实现多用户、多计费模式、IP防盗、自定义防火墙。可单机、可集群、多种存储方式（ZFS、CEPH、lvm.....等），支持宝塔虚拟主机、hyper-v虚拟化管控。功能丰富，安全稳定。">
+<title>企业模板 -Prokvm云管理系统 </title>
+<meta name="keywords" content="企业模板，Prokvm主控财务系统，是集域名注册、虚拟主机、数据库、云服务器、用户管理与充值、财务等为一体的网站管理系统。Prokvm主控财务系统，是集域名注册、虚拟主机、数据库、云服务器、用户管理与充值、财务等为一体的网站管理系统。">
+<meta name="description" content="企业模板，ProkvmIDC财务管理系统，自主研发，安全可靠。FASTOSAPI独立自主的被控虚拟化。Prokvm，基于Proxmox VE实现多用户、多计费模式、IP防盗、自定义防火墙。可单机、可集群、多种存储方式（ZFS、CEPH、lvm.....等），支持宝塔虚拟主机、hyper-v虚拟化管控。功能丰富，安全稳定。">
 <meta name='robots' content='max-image-preview:large' />   
 <link rel='stylesheet' id='uikit-css'  href='uikit.css' type='text/css' media='all' />
 <link rel='stylesheet' id='diy-css'  href='diy.css' type='text/css' media='all' />
@@ -55,13 +55,13 @@
     		    <div class="dcy-width-1-1 dcy-width-1-2@s dcy-first-column">
     		        <div class="dcy-shop-single-z">
     		            <div class="shop-single-z-title">
-                            <h1>ProKvm蓝色大气企业模板</h1>
-                            <p>模板基于ProKvm系统（官网：www.xmbillion.com）深度开发，简洁大气，高端耐看。后期会继续深度开发，欢迎提建议！
+                            <h1>多彩云企业级模板</h1>
+                            <p>多彩云模板基于ProKvm系统（官网：www.xmbillion.com）深度开发，简洁大气，高端耐看。后期会继续深度开发，欢迎提建议！
 
 提供1年免费在线更新服务，到期后666元一年续费，续费是自愿原则，不续费不影响使用（系统推出的新功能无法使用），模板授权是永久买断； 次年不续费，也可以提供在线更新服务，更新一次收费100（可集中多版本一次更新）。</p>
                         </div>
                         						                        <div class="shop-single-z-price">
-                            价格：<span><em>666</em> RMB</span> <s>原价：1599 RMB<i>新品活动</i></s>
+                            年付授权：<span><em>666</em> RMB</span> <s>永久授权：1599 RMB<i>新品活动</i></s>
                         </div>
                         <div class="shop-single-z-price">
                                                     </div>
@@ -78,7 +78,7 @@
                             </div>
                             <div class="dcy-grid-dcysmls dcy-grid" dcy-grid="">
                                 <div class="dcy-width-1-4">
-                                    <a class="btn4" href="/vip" target="_blank">后台控制</a>
+                                    <a class="btn4" href="https://cloud.ackpet.com" target="_blank">后台控制</a>
                                 </div>
                                 <div class="dcy-width-1-4">
                                     <a class="btn4" href="https://wpa.qq.com/msgrd?v=3&amp;uin=20233652&amp;site=qq&amp;menu=yes" target="_blank" rel="noreferrer nofollow">自定义颜色</a>
@@ -119,43 +119,43 @@
     	                <div class="dcy-position-relative dcy-slideshow" dcy-slideshow="animation: fade">
                             <ul class="dcy-slideshow-items" style="box-shadow: rgba(0, 111, 255, 0.48) 0px 45px 80px -24px; min-height: 331.875px;">
                                 <li tabindex="-1" class="dcy-active dcy-transition-active" style="z-index: -1;">
-                                    <img src="20240315214137301.png" alt="YPay 单商户版 专为个人打造的聚合免签系统">
+                                    <img src="20240315214137301.png" alt="多彩云企业级模板">
                                 </li>
                                 <li tabindex="-1">
-                                    <img src="20240315214137301.png">
+                                    <img src="20240315214137302.png" alt="多彩云企业级模板">
                                 </li>
                                 <li tabindex="-1">
-                                    <img src="20240315214137301.png">
+                                    <img src="20240315214137303.png" alt="多彩云企业级模板">
                                 </li>
                                 <li tabindex="-1">
-                                    <img src="20240315214137301.png">
+                                    <img src="20240315214137304.png" alt="多彩云企业级模板">
                                 </li>
                                 <li tabindex="-1">
-                                    <img src="20240315214137301.png">
+                                    <img src="20240315214137305.png" alt="多彩云企业级模板">
                                 </li>
                                 <li tabindex="-1">
-                                    <img src="20240315214137301.png">
+                                    <img src="20240315214137306.png" alt="多彩云企业级模板">
                                 </li>
                                                             </ul>
                             <div class="dcy-shop-single-ybo dcy-position-relative dcy-visible-toggle dcy-light dcy-slider dcy-slider-container" tabindex="-1" dcy-slider="">
                                 <ul class="dcy-thumbnav dcy-slider-items dcy-child-width-1-2 dcy-child-width-1-4@m dcy-grid" style="transform: translate3d(0px, 0px, 0px);">
                                     <li dcy-slideshow-item="0" tabindex="-1" class="dcy-active">
-                                        <a href="#"><img src="20240315214137301.png"></a>
+                                        <a href="#"><img src="20240315214137301.png" alt="多彩云企业级模板"></a>
                                     </li>
                                     <li dcy-slideshow-item="1" tabindex="-1">
-                                        <a href="#"><img src="20240315214137301.png"></a>
+                                        <a href="#"><img src="20240315214137302.png" alt="多彩云企业级模板"></a>
                                     </li>
                                     <li dcy-slideshow-item="2" tabindex="-1">
-                                        <a href="#"><img src="20240315214137301.png"></a>
+                                        <a href="#"><img src="20240315214137303.png" alt="多彩云企业级模板"></a>
                                     </li>
                                      <li dcy-slideshow-item="3" tabindex="-1">
-                                        <a href="#"><img src="20240315214137301.png"></a>
+                                        <a href="#"><img src="20240315214137304.png" alt="多彩云企业级模板"></a>
                                     </li>
                                      <li dcy-slideshow-item="4" tabindex="-1">
-                                        <a href="#"><img src="20240315214137301.png"></a>
+                                        <a href="#"><img src="20240315214137305.png" alt="多彩云企业级模板"></a>
                                     </li>
                                      <li dcy-slideshow-item="5" tabindex="-1">
-                                        <a href="#"><img src="20240315214137301.png"></a>
+                                        <a href="#"><img src="20240315214137306.png" alt="多彩云企业级模板"></a>
                                     </li>
                                                                     </ul>
                              
@@ -170,4 +170,6 @@
 </body>
 </html>
 
+ 
+ 
  
